# node-skia-canvas

./: .editorconfig  .eslintrc.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hello.js  image.js  jest.config.js  lineDash.js  package-lock.json  package.json  path.js  transform.js
.github/workflows/: main.yml
__tests__/: canvas.js  canvas.test.js  color.test.js  dommatrix.test.js  font.test.js  image.test.js  imagedata.test.js
demo/: CMakeLists.txt  main.cc
examples/: draw_text.js  font.js  hello.js  image.js  lineDash.js  path.js  pattern.js  skia_showcase.js  transform.js
lib/: Canvas.js  CanvasRenderingContext2D.js  DOMMatrix.js  index.js  parseFont.js  utils.js
scripts/: build_skia.js  run_example.js  w3c_color.js  w3c_extended_color
scripts/build_tools/: build_skia.js  env.js  export_external_3rdparty.js  logger.js
scripts/centos7_build_action/: Dockerfile  action.yml  build.js
src/: CMakeLists.txt  Canvas.cc  Canvas.h  CanvasGradient.cc  CanvasGradient.h  CanvasPattern.cc  CanvasPattern.h  CanvasRenderingContext2D.cc  CanvasRenderingContext2D.h  ColorParser.cc  ColorParser.h  FontManager.cc  FontManager.h  Image.cc  Image.h  ImageData.cc  ImageData.h  StyleParser.cc  StyleParser.h  TextMetrics.cc  TextMetrics.h  W3CSkColorParser.cc  W3CSkColorParser.h  color.cc  color.h  demo.cc  helpers.cc  helpers.h  init.cc
test/: canvas.test.js  color.test.js  dommatrix.test.js  font.test.js  image.test.js  imagedata.test.js
